tests/unit/macho/fat/snapshots/unit__macho__fat__test_patching__change_dylib_id-4.snap
---
source: tests/unit/macho/fat/test_patching.rs
expression: changed_macho.name
---
Some(
    "very_very_very_very_very_very_very_longid.dylib",
)
